--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>babyrentals</title>
+    <title>happybabyrentals</title>
 </head>
 <body>
-    <h1>babyrentals</h1>
+    <h1>happybabyrentals</h1>
 </body>
 </html>
