--- a/index.html
+++ b/index.html
@@ -2,9 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>happybabyrentals</title>
+    <title>Baby equipment rentals in Puerto Escondido</title>
+    <meta name="description" content="">
+    <style type="text/css">
+        a {
+            font-family: tahoma;
+            color: blue;
+        }
+        .mainImage {
+            max-width: 100%;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 10px;
+        }
+        .center {
+            text-align: center;
+        }
+
+    </style>
 </head>
 <body>
-    <h1>happybabyrentals</h1>
+    <div class="center">
+        <a href="https://forms.google.com" target="_blank">Book Now!</a>
+    </div>
+    <img src="v1_es.jpeg" class="mainImage" />
 </body>
 </html>
