--- a/english/index.html
+++ b/english/index.html
@@ -27,16 +27,10 @@
     </style>
 </head>
 <body>
-    <div style="position:absolute;right:5px;top:55px;">
-        <a href="/english/"><button>English</button></a>
-    </div>
+
     <div class="center">
-        <a href="https://forms.google.com" target="_blank"><button>Reserva Aquí</button></a>
+        Coming Soon
     </div>
-    <img src="babyrentals.mx_es_page_1_v_1.png" class="mainImage" />
-    <img src="babyrentals.mx_es_page_2_v_1.png" class="mainImage" />
-    <div class="center">
-        <a href="https://forms.google.com" target="_blank"><button>Reserva Aquí</button></a>
-    </div>
+
 </body>
 </html>
