--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             border-radius: 4px;
             cursor: pointer;
             background-color: white;
+            border: 1px solid grey;
         }
         button:hover {
             background-color: #f1f1f1;
@@ -56,7 +57,7 @@
                 max-width: 100%
             }
         }
-        @media (max-width: 400px) {
+        @media (max-width: 300px) {
             .language-button {
                 right:3px;
                 top:3px;
