--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             cursor: pointer;
             background-color: white;
             border: 1px solid grey;
+            color: black;
         }
         button:hover {
             background-color: #f1f1f1;
