--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <style type="text/css">
         body {
-            margin:0;
-            padding:0
+            margin: 0;
+            padding: 0;
         }
         a {
-            font-family: tahoma;
             color: blue;
         }
         .mainImage {
@@ -35,6 +34,8 @@
             background-color: white;
             border: 1px solid grey;
             color: black;
+            font-family: Verdana;
+            font-weight: 500;
         }
         button:hover {
             background-color: #f1f1f1;
