--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             padding-bottom: 30px;
         }
         button {
-            padding: 5px 25px 5px 25px;
+            padding: 8px;
             border-radius: 4px;
             cursor: pointer;
             background-color: white;
