--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             padding: 8px;
             border-radius: 4px;
             cursor: pointer;
-            background-color: white;
+            background-color: #fafafa;
             border: 1px solid grey;
             color: black;
             font-family: Verdana;
