--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         .center {
             text-align: center;
             padding-top: 30px;
-            padding-bottom: 30px;
+            padding-bottom: 15px;
         }
         button {
             padding: 8px;
@@ -78,7 +78,7 @@
     </div>
     <img src="homepage_spanish_page1_v1.png" class="mainImage" />
     <img src="homepage_spanish_page2_v1.png" class="mainImage" />
-    <div class="center">
+    <div class="center" style="margin-bottom:30px;">
         <a href="https://forms.google.com" target="_blank">
             <button class="mainButton">Reserva Aquí</button>
         </a>
