--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
         <a href="/english/"><button>English</button></a>
     </div>
     <div class="center">
-        <a href="https://forms.google.com" target="_blank">
+        <a href="/book" target="_blank">
             <button class="mainButton">Reserva Aquí</button>
         </a>
     </div>
     <img src="homepage_spanish_page1_v1.png" class="mainImage" />
     <img src="homepage_spanish_page2_v1.png" class="mainImage" />
     <div class="center" style="margin-bottom:30px;">
-        <a href="https://forms.google.com" target="_blank">
+        <a href="/book" target="_blank">
             <button class="mainButton">Reserva Aquí</button>
         </a>
     </div>
