--- a/book.html
+++ b/book.html
@@ -2,12 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Book your baby equipment</title>
+    <style type="text/css">
+        body {
+            margin: 0;
+            padding: 0;
+        }
+        a {
+            color: blue;
+        }
+    </style>
 </head>
-<body>
+<body style="max-width:100%;text-align:center;">
 
-<div style="max-width:100%;text-align:center;">
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfTJI2pXnCtqRgfla5IXWcbeSaQGAZV4sPyUl3vWtaTVEr05Q/viewform?embedded=true" width="640" height="2643" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+<p><a href="/">Back to Homepage</a></p>
+<img src="book_heading_v1.png" style="width:640px;"/>
+
+<p>If you can't see the form below, please <a href="https://docs.google.com/forms/d/e/1FAIpQLSfTJI2pXnCtqRgfla5IXWcbeSaQGAZV4sPyUl3vWtaTVEr05Q/viewform?usp=sf_link" traget="_blank">click here</a>.</p>
+<div>
+<iframe style="width:100%;" src="https://docs.google.com/forms/d/e/1FAIpQLSfTJI2pXnCtqRgfla5IXWcbeSaQGAZV4sPyUl3vWtaTVEr05Q/viewform?embedded=true" width="640" height="2643" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 </div>
 
 </body>
