--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
             font-weight: 500;
         }
         button:hover {
-            background-color: #f1f1f1;
+            background-color: #f0f0f0;
         }
         .mainButton {
-            background-color: #1F18C0;
+            background-color: #4c9da9;
             color: white;
-            border: 2px solid yellow;
+            border: 3px solid black;
         }
         .mainButton:hover {
-            background-color: blue;
+            background-color: #9e70ba;
         }
         .language-button {
             position: absolute;
@@ -72,14 +72,15 @@
         <a href="/english/"><button>English</button></a>
     </div>
     <div class="center">
-        <a href="/book" target="_blank">
+        <a href="/book">
             <button class="mainButton">Reserva Aquí</button>
         </a>
     </div>
-    <img src="homepage_spanish_page1_v1.png" class="mainImage" />
-    <img src="homepage_spanish_page2_v1.png" class="mainImage" />
+    <img src="homepage_spanish_page1_v2.png" class="mainImage" />
+    <img src="homepage_spanish_page2_v2.png" class="mainImage" />
+    <img src="homepage_spanish_page3_v2.png" class="mainImage" />
     <div class="center" style="margin-bottom:30px;">
-        <a href="/book" target="_blank">
+        <a href="/book">
             <button class="mainButton">Reserva Aquí</button>
         </a>
     </div>
