--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
         <a href="/english/"><button>English</button></a>
     </div>
     <div class="center">
-        <a href="/book">
+        <a href="/reserva-ahora">
             <button class="mainButton">Reserva Aquí</button>
         </a>
     </div>
     <img src="homepage_spanish_page1_v2.png" class="mainImage" />
-    <img src="homepage_spanish_page2_v2.png" class="mainImage" />
     <img src="homepage_spanish_page3_v2.png" class="mainImage" />
+    <img src="homepage_spanish_page2_v2.png" class="mainImage" />
     <div class="center" style="margin-bottom:30px;">
-        <a href="/book">
+        <a href="/reserva-ahora">
             <button class="mainButton">Reserva Aquí</button>
         </a>
     </div>
