--- a/reserva-ahora.html
+++ b/reserva-ahora.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Book your baby equipment</title>
+    <meta name="description" content="Rent daily, weekly or monthly super clean, quality baby items: cribs, car seats and more. Travel light while keeping your baby comfortable.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:image" content="">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+
     <style type="text/css">
         body {
             margin: 0;
@@ -20,7 +25,7 @@
 
 <p>If you can't see the form below, please <a href="https://docs.google.com/forms/d/e/1FAIpQLSfTJI2pXnCtqRgfla5IXWcbeSaQGAZV4sPyUl3vWtaTVEr05Q/viewform?usp=sf_link" traget="_blank">click here</a>.</p>
 <div>
-<iframe style="width:100%;" src="https://docs.google.com/forms/d/e/1FAIpQLSfTJI2pXnCtqRgfla5IXWcbeSaQGAZV4sPyUl3vWtaTVEr05Q/viewform?embedded=true" width="640" height="2643" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+<iframe style="width:100%;" src="https://docs.google.com/forms/d/e/1FAIpQLSfTJI2pXnCtqRgfla5IXWcbeSaQGAZV4sPyUl3vWtaTVEr05Q/viewform?embedded=true" width="640" height="3000" frameborder="0" marginheight="0" marginwidth="0" scrolling="no">Loading…</iframe>
 </div>
 
 </body>
