--- a/reserva-ahora.html
+++ b/reserva-ahora.html
@@ -19,11 +19,15 @@
     </style>
 </head>
 <body style="max-width:100%;text-align:center;">
-
+<div style="text-align:center;">
 <p><a href="/">Back to Homepage</a></p>
+    </div>
 <img src="book_heading_v1.png" style="width:640px;"/>
 
+<div style="text-align:center;">
 <p>If you can't see the form below, please <a href="https://docs.google.com/forms/d/e/1FAIpQLSfTJI2pXnCtqRgfla5IXWcbeSaQGAZV4sPyUl3vWtaTVEr05Q/viewform?usp=sf_link" traget="_blank">click here</a>.</p>
+</div>
+
 <div>
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfTJI2pXnCtqRgfla5IXWcbeSaQGAZV4sPyUl3vWtaTVEr05Q/viewform?embedded=true" width="640" height="4000" frameborder="0" marginheight="0" marginwidth="0" scrolling="no">Loading…</iframe>
 </div>
