--- a/reserva-ahora.html
+++ b/reserva-ahora.html
@@ -22,7 +22,7 @@
 <div style="text-align:center;">
 <p><a href="/">Back to Homepage</a></p>
     </div>
-<img src="book_heading_v1.png" style="width:640px;"/>
+<img src="book_heading_v1.png" style="width:640px;max-width:100%;"/>
 
 <div style="text-align:center;">
 <p>If you can't see the form below, please <a href="https://docs.google.com/forms/d/e/1FAIpQLSfTJI2pXnCtqRgfla5IXWcbeSaQGAZV4sPyUl3vWtaTVEr05Q/viewform?usp=sf_link" traget="_blank">click here</a>.</p>
