--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Rent daily, weekly or monthly super clean, quality baby items: cribs, car seats and more. Travel light while keeping your baby comfortable.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:image" content="">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/favicon1.ico">
     <style type="text/css">
         body {
             margin: 0;
