--- a/english/book-now.html
+++ b/english/book-now.html
@@ -19,7 +19,7 @@
     </style>
 </head>
 <body style="text-align:center;">
-    <p style="min-width:640px;"><a href="/">Back to Homepage</a></p>
+    <p style="min-width:640px;"><a href="/english/">Back to Homepage</a></p>
     <img src="/book_heading_v1.png" style="width:640px;"/>
     <p style="min-width:640px;">If you can't see the form below, please <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSfTJI2pXnCtqRgfla5IXWcbeSaQGAZV4sPyUl3vWtaTVEr05Q/viewform?usp=sf_link" traget="_blank">click here</a>.</p>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfTJI2pXnCtqRgfla5IXWcbeSaQGAZV4sPyUl3vWtaTVEr05Q/viewform?embedded=true" width="640" height="4000" frameborder="0" marginheight="0" marginwidth="0" scrolling="no">Loading…</iframe>
