--- a/english/index.html
+++ b/english/index.html
@@ -5,7 +5,7 @@
     <title>Baby equipment rentals in Puerto Escondido, Mexico</title>
     <meta name="description" content="Rent daily, weekly or monthly super clean, quality baby items: cribs, car seats and more. Travel light while keeping your baby comfortable.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="/preview_logo_v1.png">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <style type="text/css">
         body {
