--- a/english/index.html
+++ b/english/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Baby equipment rentals in Puerto Escondido, Mexico</title>
+    <title>Baby equipment rentals in Puerto Escondido, México</title>
     <meta name="description" content="Rent daily, weekly or monthly super clean, quality baby items: cribs, car seats and more. Travel light while keeping your baby comfortable.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:image" content="/preview_logo_v1.png">
