--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Baby equipment rentals in Puerto Escondido, Mexico</title>
-    <meta name="description" content="Rent daily, weekly or monthly super clean, quality baby items: cribs, car seats and more. Travel light while keeping your baby comfortable.">
+    <title>Renta de equipo de bebé en Puerto Escondido, México</title>
+    <meta name="description" content="Renta por día, semana o mes equipo súper limpio y de calidad: cunas, corralitos, autoasientos y más. Viaja ligero y con toda la comodidad para tu bebé.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:image" content="/preview_logo_v1.png">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
