--- a/products.html
+++ b/products.html
@@ -1,8 +1,124 @@
-<div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
- padding-bottom: 48px; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
- border-radius: 8px; will-change: transform;">
-  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAE3mdWB2BU&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
-  </iframe>
-</div>
-<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAE3mdWB2BU&#x2F;view?utm_content=DAE3mdWB2BU&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Colorido Divertido y Lúdico Producto Orgánico Presentación de Marketing</a> de Baby Rentals Mx
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Baby equipment rentals in Puerto Escondido, México</title>
+    <meta name="description" content="Rent daily, weekly or monthly super clean, quality baby items: cribs, car seats and more. Travel light while keeping your baby comfortable.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:image" content="/preview_logo_v2.png">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <style type="text/css">
+        body {
+            margin: 0;
+            padding: 0;
+        }
+        a {
+            color: blue;
+        }
+        .mainImage {
+            max-width: 66%;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 10px;
+        }
+        .center {
+            text-align: center;
+            padding-top: 30px;
+            padding-bottom: 15px;
+        }
+        button {
+            padding: 8px;
+            border-radius: 4px;
+            cursor: pointer;
+            background-color: #fafafa;
+            border: 1px solid grey;
+            color: black;
+            font-family: Raleway,Verdana;
+            font-weight: 500;
+        }
+        button:hover {
+            background-color: #f0f0f0;
+        }
+        .mainButton {
+            background-color: #4c9da9;
+            color: white;
+            border: 3px solid black;
+        }
+        .mainButton:hover {
+            background-color: #9e70ba;
+        }
+        .language-button {
+            position: absolute;
+            right: 15px;
+            top: 32px;
+        }
+
+        @media (max-width: 600px) {
+            .mainImage {
+                max-width: 100%
+            }
+        }
+        @media (max-width: 300px) {
+            .language-button {
+                right:3px;
+                top:3px;
+            }
+        }
+    </style>
+</head>
+<body>
+    <div class="language-button">
+        <a href="/"><button>Español</button></a>
+    </div>
+    <div class="center">
+        <a href="/english/book-now">
+            <button class="mainButton">Book Here</button>
+        </a>
+    </div>
+
+    <img src="products_1.png" class="mainImage" />
+    <div class="center">
+        <a href="/carseats.pdf">
+            <button class="mainButton">Car seats information</button>
+        </a>
+    </div>
+
+    <img src="products_2.png" class="mainImage" />
+    <div class="center">
+        <a href="/cribs.pdf">
+            <button class="mainButton">Cribs information</button>
+        </a>
+    </div>
+
+    <img src="products_3.png" class="mainImage" />
+    <div class="center">
+        <a href="/strollers.pdf">
+            <button class="mainButton">Strollers information</button>
+        </a>
+    </div>
+
+    <img src="products_4.png" class="mainImage" />
+    <div class="center">
+        <a href="/chairs.pdf">
+            <button class="mainButton">Chairs information</button>
+        </a>
+    </div>
+
+    <img src="products_5.png" class="mainImage" />
+    <div class="center">
+        <a href="/more_items.pdf">
+            <button class="mainButton">More items information</button>
+        </a>
+    </div>
+
+    <img src="products_6.png" class="mainImage" />
+
+    <div class="center" style="margin-bottom:30px;">
+        <a href="/english/book-now">
+            <button class="mainButton">Book Here</button>
+        </a>
+    </div>
+</body>
+</html>
