--- a/404.html
+++ b/404.html
@@ -1,1 +1,51 @@
-<p>Page not found</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Page not found</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <style type="text/css">
+        body {
+            margin: 0;
+            padding: 0;
+        }
+        a {
+            color: blue;
+        }
+
+        .center {
+            text-align: center;
+            padding-top: 30px;
+            padding-bottom: 15px;
+        }
+        button {
+            padding: 8px;
+            border-radius: 4px;
+            cursor: pointer;
+            background-color: #fafafa;
+            border: 1px solid grey;
+            color: black;
+            font-family: Verdana;
+            font-weight: 500;
+        }
+        button:hover {
+            background-color: #f0f0f0;
+        }
+
+    </style>
+</head>
+<body>
+
+    <div class="center" style="margin:30px;">
+        <p>Page not found</p>
+    </div>
+
+    <div class="center">
+        <a href="/">
+            <button>Homepage</button>
+        </a>
+    </div>
+</body>
+</html>
