--- a/representantesquiz.html
+++ b/representantesquiz.html
@@ -20,7 +20,7 @@
 </head>
 <body style="text-align:center;">
     <p style="min-width:640px;"><a href="/">Back to Homepage</a></p>
-    <img src="/book_heading_v1.png" style="width:640px;"/>
+    <a href="/"><img src="/representantes_heading_v1.png" style="width:640px;"/></a>
     <p style="min-width:640px;">If you can't see the form below, please <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSeCIF3fjZpSlV6l5Zv5X2if02n12SMCBDpXqI-hEuUwsK-tvA/viewform?usp=sf_link" traget="_blank">click here</a>.</p>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeCIF3fjZpSlV6l5Zv5X2if02n12SMCBDpXqI-hEuUwsK-tvA/viewform?embedded=true" width="640" height="4000" frameborder="0" marginheight="0" marginwidth="0" scrolling="no">Loading…</iframe>
 </body>
