--- a/404.html
+++ b/404.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <title>Page not found</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <style type="text/css">
         body {
             margin: 0;
             padding: 0;
+            font-family: Raleway,Verdana;
         }
         a {
             color: blue;
