--- a/english/book-now.html
+++ b/english/book-now.html
@@ -7,11 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:image" content="/preview_logo_v2.png">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
-
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <style type="text/css">
         body {
             margin: 0;
             padding: 0;
+            font-family: Raleway,Verdana;
         }
         a {
             color: blue;
