--- a/english/index.html
+++ b/english/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:image" content="/preview_logo_v2.png">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <style type="text/css">
         body {
             margin: 0;
@@ -34,7 +35,7 @@
             background-color: #fafafa;
             border: 1px solid grey;
             color: black;
-            font-family: Verdana;
+            font-family: Raleway,Verdana;
             font-weight: 500;
         }
         button:hover {
