--- a/reserva-ahora.html
+++ b/reserva-ahora.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <title>Book your baby equipment</title>
@@ -20,9 +20,9 @@
     </style>
 </head>
 <body style="text-align:center;">
-    <p style="min-width:640px;"><a href="/">Back to Homepage</a></p>
+    <p style="min-width:640px;"><a href="/">Regresa a la página de inicio</a></p>
     <img src="/book_heading_v1.png" style="width:640px;"/>
-    <p style="min-width:640px;">If you can't see the form below, please <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSeIgjRjaRquMZI2mcnrI-eohE84xrvMYINguQ2RAQzagCn8HQ/viewform?usp=sf_link" traget="_blank">click here</a>.</p>
+    <p style="min-width:640px;">Si no puedes ver el formulario completo <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSeIgjRjaRquMZI2mcnrI-eohE84xrvMYINguQ2RAQzagCn8HQ/viewform?usp=sf_link" traget="_blank">haz clic aquí</a>.</p>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeIgjRjaRquMZI2mcnrI-eohE84xrvMYINguQ2RAQzagCn8HQ/viewform?embedded=true" width="640" height="4300" frameborder="0" marginheight="0" marginwidth="0" scrolling="no">Loading…</iframe>
 </body>
 </html>
