--- a/english/index.html
+++ b/english/index.html
@@ -80,6 +80,11 @@
     <img src="homepage_english_page1_1_v2.png" class="mainImage" />
     <img src="homepage_english_page1_2_v2.png" class="mainImage" />
     <img src="homepage_english_page3_v2.png" class="mainImage" />
+    <div class="center">
+        <a href="/rental-and-safety-conditions.pdf">
+            <button class="mainButton">Check our rental conditions here</button>
+        </a>
+    </div>
     <img src="homepage_english_page2_v2.png" class="mainImage" />
     <div class="center" style="margin-bottom:30px;">
         <a href="/english/book-now">
