--- a/index.html
+++ b/index.html
@@ -79,7 +79,15 @@
     </div>
     <img src="homepage_spanish_page1_1_v2.png" class="mainImage" />
     <img src="homepage_spanish_page1_2_v2.png" class="mainImage" />
+
     <img src="homepage_spanish_page2_v2.png" class="mainImage" />
+
+    <div class="center">
+        <a href="/condiciones-de-renta-y-seguridad.pdf">
+            <button class="mainButton">Consulta nuestras condiciones de renta aquí</button>
+        </a>
+    </div>
+
     <img src="homepage_spanish_page3_v2.png" class="mainImage" />
     <div class="center" style="margin-bottom:30px;">
         <a href="/reserva-ahora">
