--- a/english/index.html
+++ b/english/index.html
@@ -86,10 +86,14 @@
         </a>
     </div>
     <img src="homepage_english_page2_v2.png" class="mainImage" />
-    <div class="center" style="margin-bottom:30px;">
+    <div class="center" style="margin-bottom:0px;">
         <a href="/english/book-now">
             <button class="mainButton">Book Here</button>
         </a>
     </div>
+    <a href="https://www.instagram.com/babyrentalsmx/" target="_blank">
+        <img src="instagram_english.jpg" class="mainImage" />
+    </a>
+    <div style="margin-bottom:50px;"></div>
 </body>
 </html>
