--- a/index.html
+++ b/index.html
@@ -89,10 +89,14 @@
     </div>
 
     <img src="homepage_spanish_page3_v2.png" class="mainImage" />
-    <div class="center" style="margin-bottom:30px;">
+    <div class="center" style="margin-bottom:0px;">
         <a href="/reserva-ahora">
             <button class="mainButton">Reserva Aquí</button>
         </a>
     </div>
+    <a href="https://www.instagram.com/babyrentalsmx/" target="_blank">
+        <img src="instagram_spanish.jpg" class="mainImage" />
+    </a>
+    <div style="margin-bottom:50px;"></div>
 </body>
 </html>
