--- a/index.html
+++ b/index.html
@@ -98,5 +98,6 @@
         <img src="instagram_spanish.jpg" class="mainImage" />
     </a>
     <div style="margin-bottom:50px;"></div>
+    <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-NFSX3L2MTH"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-NFSX3L2MTH'); </script>
 </body>
 </html>
