--- a/reserva-ahora.html
+++ b/reserva-ahora.html
@@ -24,5 +24,6 @@
     <img src="/book_heading_v1.png" style="width:640px;"/>
     <p style="min-width:640px;">Si no puedes ver el formulario completo <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSeIgjRjaRquMZI2mcnrI-eohE84xrvMYINguQ2RAQzagCn8HQ/viewform?usp=sf_link" traget="_blank">haz clic aquí</a>.</p>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeIgjRjaRquMZI2mcnrI-eohE84xrvMYINguQ2RAQzagCn8HQ/viewform?embedded=true" width="640" height="5300" frameborder="0" marginheight="0" marginwidth="0" scrolling="no">Loading…</iframe>
+    <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-NFSX3L2MTH"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-NFSX3L2MTH'); </script>
 </body>
 </html>
