--- a/english/book-now.html
+++ b/english/book-now.html
@@ -22,7 +22,7 @@
 </head>
 <body style="text-align:center;">
     <p style="min-width:640px;"><a href="/english/">Back to Homepage</a></p>
-    <img src="/babyrentals_logo_new.png" style="width:640px;"/>
+    <img src="/babyrentals_logo_new2.png" style="width:578px;border: 1px solid #cacaca;border-radius:8px;"/>
     <p style="min-width:640px;">If you can't see the form below, please <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSfTJI2pXnCtqRgfla5IXWcbeSaQGAZV4sPyUl3vWtaTVEr05Q/viewform?usp=sf_link" traget="_blank">click here</a>.</p>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfTJI2pXnCtqRgfla5IXWcbeSaQGAZV4sPyUl3vWtaTVEr05Q/viewform?embedded=true" width="640" height="7500" frameborder="0" marginheight="0" marginwidth="0" scrolling="no">Loading…</iframe>
     <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-NFSX3L2MTH"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-NFSX3L2MTH'); </script>
