--- a/reserva-ahora.html
+++ b/reserva-ahora.html
@@ -19,7 +19,7 @@
         }
     </style>
 </head>
-<body style="text-align:center;width:640px;max-width:100%;">
+<body style="text-align:center;width:640px;max-width:100%;margin: 0 auto;">
     <p><a href="/">Regresa a la página de inicio</a></p>
     <img src="/babyrentals_logo_new3.png" style="width:578px;max-width:100%;border: 1px solid #cacaca;border-radius:8px;"/>
     <p>Si no puedes ver el formulario completo <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSeIgjRjaRquMZI2mcnrI-eohE84xrvMYINguQ2RAQzagCn8HQ/viewform?usp=sf_link" traget="_blank">haz clic aquí</a>.</p>
