--- a/reserva-ahora.html
+++ b/reserva-ahora.html
@@ -20,9 +20,11 @@
     </style>
 </head>
 <body style="text-align:center;width:640px;max-width:100%;margin: 0 auto;">
-    <p><a href="/">Regresa a la página de inicio</a></p>
-    <img src="/babyrentals_logo_new3.png" style="width:578px;max-width:100%;border: 1px solid #cacaca;border-radius:8px;"/>
-    <p>Si no puedes ver el formulario completo <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSeIgjRjaRquMZI2mcnrI-eohE84xrvMYINguQ2RAQzagCn8HQ/viewform?usp=sf_link" traget="_blank">haz clic aquí</a>.</p>
+    <div style="padding-right: 5%;padding-left: 5%;">
+        <p><a href="/">Regresa a la página de inicio</a></p>
+        <img src="/babyrentals_logo_new3.png" style="width:640px;max-width:100%;border: 1px solid #cacaca;border-radius:8px;"/>
+        <p>Si no puedes ver el formulario completo <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSeIgjRjaRquMZI2mcnrI-eohE84xrvMYINguQ2RAQzagCn8HQ/viewform?usp=sf_link" traget="_blank">haz clic aquí</a>.</p>
+    </div>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeIgjRjaRquMZI2mcnrI-eohE84xrvMYINguQ2RAQzagCn8HQ/viewform?embedded=true" width="640" height="8500" frameborder="0" marginheight="0" marginwidth="0" scrolling="no" style="max-width:100%;">Loading…</iframe>
     <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-NFSX3L2MTH"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-NFSX3L2MTH'); </script>
 </body>
