--- a/english/book-now.html
+++ b/english/book-now.html
@@ -21,9 +21,11 @@
 
 </head>
 <body style="text-align:center;width:640px;max-width:100%;margin: 0 auto;">
-    <p><a href="/english/">Back to Homepage</a></p>
-    <img src="/babyrentals_logo_new3.png" style="width:578px;border: 1px solid #cacaca;border-radius:8px;max-width:100%;"/>
-    <p>If you can't see the form below, please <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSfTJI2pXnCtqRgfla5IXWcbeSaQGAZV4sPyUl3vWtaTVEr05Q/viewform?usp=sf_link" traget="_blank">click here</a>.</p>
+    <div style="padding-right: 5%;padding-left: 5%;">
+        <p><a href="/english/">Back to Homepage</a></p>
+        <img src="/babyrentals_logo_new3.png" style="width:640px;border: 1px solid #cacaca;border-radius:8px;max-width:100%;"/>
+        <p>If you can't see the form below, please <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSfTJI2pXnCtqRgfla5IXWcbeSaQGAZV4sPyUl3vWtaTVEr05Q/viewform?usp=sf_link" traget="_blank">click here</a>.</p>
+    </div>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfTJI2pXnCtqRgfla5IXWcbeSaQGAZV4sPyUl3vWtaTVEr05Q/viewform?embedded=true" width="640" height="8500" frameborder="0" marginheight="0" marginwidth="0" scrolling="no" style="max-width:100%;">Loading…</iframe>
     <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-NFSX3L2MTH"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-NFSX3L2MTH'); </script>
 </body>
