--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Renta de equipo de bebé en Puerto Escondido, México</title>
     <meta name="description" content="Renta por día, semana o mes equipo súper limpio y de calidad: cunas, corralitos, autoasientos y más. Viaja ligero y con toda la comodidad para tu bebé.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:image" content="/preview_logo_v2.png">
+    <meta property="og:image" content="/babyrentals_og.jpg">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <style type="text/css">
