--- a/reserva-ahora.html
+++ b/reserva-ahora.html
@@ -2,8 +2,8 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Book your baby equipment</title>
-    <meta name="description" content="Rent daily, weekly or monthly super clean, quality baby items: cribs, car seats and more. Travel light while keeping your baby comfortable.">
+    <title>Reserva tu equipo de bebé aquí</title>
+    <meta name="description" content="Cotiza o continúa tu reservación de equipo de bebé. Contamos con cunas, autoasientos, sillas altas, sillas bouncer, tinas, puertas de seguridad,juguetes y todo el equipo que necesitas para tus vacaciones en Puerto Escondido.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:image" content="/babyrentals_og.jpg">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
