--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Renta de equipo de bebé en Puerto Escondido, México</title>
-    <meta name="description" content="Renta cunas, autoasientos, sillas altas, juguetes y más. Durante el tiempo que lo necesites y con toda la comodidad para tu bebé.">
+    <meta name="description" content="Renta de: cunas, autoasientos, sillas altas, juguetes y más. Durante el tiempo que lo necesites y con toda la comodidad para tu bebé.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:image" content="/babyrentals_og.jpg">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
