--- a/english/index.html
+++ b/english/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Baby equipment rentals in Puerto Escondido, México</title>
-    <meta name="description" content="Rent daily, weekly or monthly super clean, quality baby items: cribs, car seats and more. Travel light while keeping your baby comfortable.">
+    <meta name="description" content="Rent clean, quality baby items: cribs, car seats and more. Travel light to Puerto Escondido while keeping your baby comfortable.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:image" content="/babyrentals_og.jpg">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
