--- a/english/book-now.html
+++ b/english/book-now.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Book your baby equipment</title>
-    <meta name="description" content="Rent daily, weekly or monthly super clean, quality baby items: cribs, car seats and more. Travel light while keeping your baby comfortable.">
+    <meta name="description" content="Get a quote or continue your reservation. Travel light while keeping your baby comfortable with the equipment you need.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:image" content="/babyrentals_og.jpg">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
