--- a/index.html
+++ b/index.html
@@ -69,26 +69,31 @@
     </style>
 </head>
 <body>
-    <div class="language-button">
-        <a href="/english/"><button>English</button></a>
+    <div class="language-button" style="position: absolute; top: 10px; right: 10px;">
+       <a href="/english/"><button>English</button></a>
     </div>
-    <div class="center">
+<!--     <div class="center">
         <a href="/reserva-ahora">
             <button class="mainButton">Reserva Aquí</button>
         </a>
-    </div>
-    <img src="homepage_spanish_page1_1_v2.png" class="mainImage" />
-    <img src="homepage_spanish_page1_2_v2.png" class="mainImage" />
+    </div> -->
+    <a href="/reserva-ahora">
+       <img src="spanish_1.jpg" class="mainImage" />
+    </a>
+    <a href="/reserva-ahora">
+       <img src="spanish_2.jpg" class="mainImage" />
+    </a>
+    <a href="/reserva-ahora">
+       <img src="spanish_3.jpg" class="mainImage" />
+    </a>
 
-    <img src="homepage_spanish_page2_v2.png" class="mainImage" />
-
-    <div class="center">
+<!--     <div class="center">
         <a href="/condiciones-de-renta-y-seguridad.pdf">
             <button class="mainButton">Consulta nuestras condiciones de renta aquí</button>
         </a>
-    </div>
+    </div> -->
 
-    <img src="homepage_spanish_page3_v2.png" class="mainImage" />
+<!--     <img src="homepage_spanish_page3_v2.png" class="mainImage" />
     <div class="center" style="margin-bottom:0px;">
         <a href="/reserva-ahora">
             <button class="mainButton">Reserva Aquí</button>
@@ -96,7 +101,7 @@
     </div>
     <a href="https://www.instagram.com/babyrentalsmx/" target="_blank">
         <img src="instagram_spanish.jpg" class="mainImage" />
-    </a>
+    </a> -->
     <div style="margin-bottom:50px;"></div>
     <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-NFSX3L2MTH"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-NFSX3L2MTH'); </script>
 </body>
