--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             display: block;
             margin-left: auto;
             margin-right: auto;
-            margin-top: 10px;
+/*             margin-top: 10px; */
         }
         .center {
             text-align: center;
