--- a/index.html
+++ b/index.html
@@ -69,15 +69,29 @@
     </style>
 </head>
 <body>
-    <div class="language-button" style="position: absolute; top: 10px; right: 10px;">
+
+    <a href="/reserva-ahora">
+   <img src="spanish_1.jpg" class="mainImage" style="position: relative;" />
+   <div class="language-button" style="position: absolute; top: 10px; right: 10px;">
        <a href="/english/"><button>English</button></a>
-    </div>
+   </div>
+</a>
+<a href="/reserva-ahora">
+   <img src="spanish_2.jpg" class="mainImage" />
+</a>
+<a href="/reserva-ahora">
+   <img src="spanish_3.jpg" class="mainImage" />
+</a>
+    
+<!--     <div class="language-button" style="position: absolute; top: 10px; right: 10px;">
+       <a href="/english/"><button>English</button></a>
+    </div> -->
 <!--     <div class="center">
         <a href="/reserva-ahora">
             <button class="mainButton">Reserva Aquí</button>
         </a>
     </div> -->
-    <a href="/reserva-ahora">
+<!--     <a href="/reserva-ahora">
        <img src="spanish_1.jpg" class="mainImage" />
     </a>
     <a href="/reserva-ahora">
@@ -85,7 +99,7 @@
     </a>
     <a href="/reserva-ahora">
        <img src="spanish_3.jpg" class="mainImage" />
-    </a>
+    </a> -->
 
 <!--     <div class="center">
         <a href="/condiciones-de-renta-y-seguridad.pdf">
