--- a/index.html
+++ b/index.html
@@ -70,17 +70,20 @@
 </head>
 <body>
 
+   <div style="position: relative;">
+    <div class="language-button" style="position: absolute; top: 10px; right: 10px;">
+        <a href="/english/"><button>English</button></a>
+    </div>
     <a href="/reserva-ahora">
-   <img src="spanish_1.jpg" class="mainImage" style="position: relative;" />
-   <div class="language-button" style="position: absolute; top: 10px; right: 10px;">
-       <a href="/english/"><button>English</button></a>
-   </div>
+        <img src="spanish_1.jpg" class="mainImage" />
+    </a>
+</div>
+
+<a href="/reserva-ahora">
+    <img src="spanish_2.jpg" class="mainImage" />
 </a>
 <a href="/reserva-ahora">
-   <img src="spanish_2.jpg" class="mainImage" />
-</a>
-<a href="/reserva-ahora">
-   <img src="spanish_3.jpg" class="mainImage" />
+    <img src="spanish_3.jpg" class="mainImage" />
 </a>
     
 <!--     <div class="language-button" style="position: absolute; top: 10px; right: 10px;">
