--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
 <body>
 
    <div style="position: relative;">
-    <div class="language-button" style="position: absolute; top: 10px; right: 10px;">
+    <a href="/reserva-ahora">
+        <img src="spanish_1.jpg" class="mainImage" style="z-index: 1;" />
+    </a>
+    <div style="position: absolute; top: 10px; right: calc(17% + 10px); z-index: 2;">
         <a href="/english/"><button>English</button></a>
     </div>
-    <a href="/reserva-ahora">
-        <img src="spanish_1.jpg" class="mainImage" />
-    </a>
 </div>
 
 <a href="/reserva-ahora">
