--- a/index.html
+++ b/index.html
@@ -55,29 +55,38 @@
             top: 32px;
         }
 
-        @media (max-width: 600px) {
-            .mainImage {
-                max-width: 100%
-            }
-        }
-        @media (max-width: 300px) {
-            .language-button {
-                right:3px;
-                top:3px;
-            }
-        }
+        
     </style>
 </head>
 <body>
 
-   <div style="position: relative;">
+  <div style="position: relative;">
     <a href="/reserva-ahora">
         <img src="spanish_1.jpg" class="mainImage" style="z-index: 1;" />
     </a>
-    <div style="position: absolute; top: 10px; right: calc(17% + 10px); z-index: 2;">
+    <div style="position: absolute; top: 10px; z-index: 2;" class="language-button">
         <a href="/english/"><button>English</button></a>
     </div>
 </div>
+
+<style>
+.language-button {
+    right: calc(17% + 10px);
+}
+
+@media (max-width: 600px) {
+    .language-button {
+        right: 10px;
+    }
+}
+
+@media (max-width: 300px) {
+    .language-button {
+        right: 3px;
+        top: 3px;
+    }
+}
+</style>
 
 <a href="/reserva-ahora">
     <img src="spanish_2.jpg" class="mainImage" />
