--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
             top: 32px;
         }
 
+        @media (max-width: 600px) {
+            .mainImage {
+                max-width: 100%
+            }
+        }
+
         
     </style>
 </head>
