--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
   <div style="position: relative;">
     <a href="/reserva-ahora">
-        <img src="spanish_1.jpg" class="mainImage" style="z-index: 1;" />
+        <img src="1.jpg" class="mainImage" style="z-index: 1;" />
     </a>
     <div style="position: absolute; top: 10px; z-index: 2;" class="language-button">
         <a href="/english/"><button>English</button></a>
@@ -95,10 +95,22 @@
 </style>
 
 <a href="/reserva-ahora">
-    <img src="spanish_2.jpg" class="mainImage" />
+    <img src="2.jpg" class="mainImage" />
 </a>
 <a href="/reserva-ahora">
-    <img src="spanish_3.jpg" class="mainImage" />
+    <img src="3.jpg" class="mainImage" />
+</a>
+    <a href="/reserva-ahora">
+    <img src="4.jpg" class="mainImage" />
+</a>
+    <a href="/reserva-ahora">
+    <img src="5.jpg" class="mainImage" />
+</a>
+    <a href="/reserva-ahora">
+    <img src="6.jpg" class="mainImage" />
+</a>
+    <a href="/reserva-ahora">
+    <img src="7.jpg" class="mainImage" />
 </a>
     
 <!--     <div class="language-button" style="position: absolute; top: 10px; right: 10px;">
