--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <img src="instagram_spanish.jpg" class="mainImage" />
     </a> -->
 
-    <div>Mexico <span id="year"></span></div>
+    <div style="text-align:center;font-size:17px;">México <span id="year"></span></div>
 
 <script>
 window.onload = function() {
