--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@
     <a href="/reserva-ahora">
     <img src="4.jpg" class="mainImage" />
 </a>
-    <a href="/reserva-ahora">
+    <a href="https://wa.me/529541484953">
     <img src="5.jpg" class="mainImage" />
 </a>
     <a href="/reserva-ahora">
     <img src="6.jpg" class="mainImage" />
 </a>
-    <a href="/reserva-ahora">
+    <a href="https://www.instagram.com/babyrentalsmx/">
     <img src="7.jpg" class="mainImage" />
 </a>
     
