--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@
  
     <img src="4.jpg" class="mainImage" />
 
-    <a href="https://wa.me/529541484953">
+    <a target="_blank" href="https://wa.me/529541484953">
     <img src="5.jpg" class="mainImage" />
 </a>
     
     <img src="6.jpg" class="mainImage" />
 
-    <a href="https://www.instagram.com/babyrentalsmx/">
+    <a target="_blank" href="https://www.instagram.com/babyrentalsmx/">
     <img src="7.jpg" class="mainImage" />
 </a>
     
