--- a/english/index.html
+++ b/english/index.html
@@ -67,7 +67,7 @@
 
 
      <div style="position: relative;">
-    <a href="/reserva-ahora">
+    <a href="/english/book-now">
         <img src="1_en.jpg" class="mainImage" style="z-index: 1;" />
     </a>
     <div style="position: absolute; top: 10px; z-index: 2;" class="language-button">
@@ -94,10 +94,10 @@
 }
 </style>
 
-    <a href="/reserva-ahora">
+    <a href="/english/book-now">
     <img src="2_en.jpg" class="mainImage" />
 </a>
-<a href="/reserva-ahora">
+<a href="/english/book-now">
     <img src="3_en.jpg" class="mainImage" />
 </a>
  
